--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<header>
+  <h1> The Regular Express</h1>
+</header>
 
-{{outlet}}
+<section id="content">
+  {{outlet}}
+</section>
