--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,30 @@
-html, body {
-  margin: 20px;
+/* #6da67a green */
+/* #493d3f brown */
+/* #cee1d8 blue */
+/* #f6eee0 white */
+/* #d15c57 red */
+
+*{
+  padding: 0;
+  margin: 0;
+  color: #f6eee0;
+  line-height: 150%
+}
+
+body{
+  background: #493D3F;
+  font-family: 'Roboto Slab', serif;
+  letter-spacing: 1px;
+}
+
+header h1 {
+ font-weight: 300;
+ font-family: 'Source Sans Pro', sans-serif;
+ color: #6da67a;
+ border-bottom: solid 10px #cee1d8;
+ padding: 20px
+}
+
+#content{
+  padding: 20px
 }
