--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,12 @@
 <header>
-  <h1> The Regular Express</h1>
+  <h1> 
+    The Regular 
+    <span>Express</span>
+  </h1>
+  <div class="border"></div>
+  <div class="border"></div>
 </header>
+
 
 <section id="content">
   {{outlet}}
