--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,11 @@ $maroon: #d15c57;
   font-weight: 400;
   list-style: none;
   border: none;
+  box-sizing: border-box
+}
+
+html{
+  height: 100%
 }
 
 body{
@@ -24,11 +29,13 @@ body{
   font-family: 'Roboto Slab', serif;
   min-width: 450px;
   letter-spacing: 2px;
+  border: solid 7px $white;
+  height: 100%
 }
 
 header {
   .border{
-    width: calc( 100% - 30px);
+    width: calc( 100% - 20px);
     height: 5px;
     border-radius: 2px;
     background: $yellow;
@@ -41,7 +48,7 @@ header {
     font-weight: 300;
     font-family: 'Source Sans Pro', sans-serif;
     color: $green;
-    font-size: 44px;
+    font-size: 39px;
   }
   h1{
     padding: 20px;
@@ -80,9 +87,10 @@ header {
     border: solid 1px $green;
     color: $white;
     letter-spacing: 1px;
+    box-sizing: border-box;
 
     &:focus{
-      border: solid 2px $yellow;
+      border: solid 3px $yellow;
     }
 
   }
@@ -91,7 +99,6 @@ header {
     height: 200px;
     text-align: left;
     padding: 10px;
-    box-sizing: border-box;
   }
 
 }
