--- a/app/templates/regex.hbs
+++ b/app/templates/regex.hbs
@@ -6,9 +6,12 @@
           <input type="text" placeholder="/^Your Regex$/" autofocus="true"/>
         </li>
         <li>
-          <div id="editor" contenteditable="true" placeholder="Your text to match against goes here"></div>
+          <div id="editor" contenteditable="true">{{editorText}}</div>
         </li>
       </ul>
+    </fieldset>
+    <fieldset class="actions">
+      <button {{action "match"}}>Match</button>
     </fieldset>
   </form>
 </article>
