--- a/app/templates/regex.hbs
+++ b/app/templates/regex.hbs
@@ -5,9 +5,7 @@
         <li>
           <input type="text" placeholder="/^Your Regex$/" autofocus="true"/>
         </li>
-        <li>
-          <div id="editor" contenteditable="true">{{editorText}}</div>
-        </li>
+        <li>{{view 'editor'}}</li>
       </ul>
     </fieldset>
     <fieldset class="actions">
