Handle highlighting on the frontend

--- a/app/templates/regex.hbs
+++ b/app/templates/regex.hbs
@@ -3,7 +3,7 @@
     <fieldset>
       <ul>
         <li>
-          <input type="text" placeholder="/^Your Regex$/" autofocus="true"/>
+          {{input type="text" placeholder="/^Your Regex$/" autofocus="true" value=patternString}}
         </li>
         <li>{{view 'editor'}}</li>
       </ul>
