--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -1,1 +1,1 @@
-<div id="editor" contenteditable="true">{{model.testString}}</div>
+<div id="editor" contenteditable="true">Your test string here</div>
