--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -81,7 +81,6 @@ header {
   input, #editor{
     font-family: 'Source Sans Pro', sans-serif;
     width: 100%;
-    height: 45px;
     text-align: center;
     background: transparent;
     border: solid 1px $green;
@@ -95,11 +94,17 @@ header {
 
   }
 
+  input{
+    font-size: 24px;
+    height: 60px;
+  }
+
   #editor{
     height: 300px;
     text-align: left;
     padding: 10px;
     white-space: pre;
+    font-size: 18px;
     overflow: auto;
     span{
       background: $blue;
